--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "pkg-details"
-version = "0.1.0"
+version = "0.1.1"
 edition = "2024"
-description = "Wrapper around hyper to help with making a http server"
+description = "A way to register package details for dependencies."
 repository = "https://github.com/Developed-Methods/pkg-details"
 license = "MIT"
 
